[package]
name = "nescli"
version = "0.2.0"
authors = ["Natesh Narain <nnaraindev@gmail.com>"]
edition = "2018"

[[bin]]
name = "nescli"
path = "src/main.rs"
required-features = ["cli", "gui", "utils"]

[dependencies]
nescore = {path="../nescore", features = ["events"]}
clap = { version = "3.0.0-beta.1", optional = true }
sdl2 = { version = "0.33.0", features = ["bundled"], optional = true }
image = {version = "0.23.0", optional = true}
plotters = {version = "0.2", features = ["piston", "line_series"], optional = true}
piston_window = {version = "0.108.0", optional = true}

[features]
cli = ["clap"]
gui = ["sdl2", "plotters", "piston_window"]
utils = ["image"]
default = ["cli", "gui", "utils"]
