[package]
name = "nescore"
version = "0.1.0"
description="NES emulator"
authors = ["Natesh Narain <nnaraindev@gmail.com>"]
edition = "2018"
readme="../README.md"
license-file="LICENSE"
repository="https://github.com/nnarain/nescore"
keywords=["nes", "emulator"]

[features]
default = []
events = []
bench-nescore = []

[[test]]
name = "events"
path = "tests/events.rs"
required-features = ["events"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_nescore"
harness = false
