[package]
name = "nesimg"
version = "0.1.0"
authors = ["Natesh Narain <nnaraindev@gmail.com>"]
edition = "2018"

[[bin]]
name = "nesimg"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
nescore = {path="../nescore"}
clap = {version = "2.33.0", optional = true}
image = {version = "0.23.0", optional = true}

[features]
cli = ["clap", "image"]
default = ["cli"]
