[package]
name = "nesinfo"
version = "0.1.0"
authors = ["Natesh Narain <nnaraindev@gmail.com>"]
edition = "2018"

[[bin]]
name = "nesinfo"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
nescore = {path="../nescore"}
clap = {version = "2.33.0", optional = true}

[features]
cli = ["clap"]
default = ["cli"]
