[package]
name = "nesui"
version = "0.1.0"
authors = ["Natesh Narain <nnaraindev@gmail.com>"]
edition = "2018"

[[bin]]
name = "nesui"
path = "src/main.rs"
required-features = ["cli", "gui"]

[dependencies]
nescore = {path="../nescore"}
clap = {version = "2.33.0", optional = true}
sdl2 = {version = "0.33.0", features = ["bundled"], optional = true}

[features]
cli = ["clap"]
gui = ["sdl2"]
default = ["cli", "gui"]
